# DCT-Vision

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: cross_block_sweep.py  generate_images.py  run_all.py
benchmarks/results/: RESULTS.md  cross_block.json  latest.json  ml2_cifar.json  ml2_ycbcr.json  ml3_resnet_aug.json  ml3_ycbcr.json
docs/: architecture.md  cli-reference.md  installation.md  ml-integration.md  python-api.md
src/dct_vision/: __init__.py  exceptions.py
src/dct_vision/_libjpeg/: bindings.py  native.py
src/dct_vision/apps/: __init__.py  dedup.py  forensics.py  thumbnail.py
src/dct_vision/augment/: crop.py  flip.py  jitter.py  noise.py
src/dct_vision/cli/: app.py
src/dct_vision/core/: block.py  channel.py  dct_image.py
src/dct_vision/io/: convert.py  jpeg_reader.py  jpeg_writer.py  validation.py
src/dct_vision/math/: colorspace.py  dct.py  metrics.py  quantization.py
src/dct_vision/ml/: augment_pipeline.py  cache.py  dataset.py  models.py  train.py
src/dct_vision/ops/: analysis.py  blur.py  color.py  compression.py  cross_block.py  denoise.py  edge.py  filters.py  geometry.py  phash.py  photo.py  quality.py  scale.py  sharpen.py
src/dct_vision/utils/: constants.py  logging.py  profiling.py
tests/: conftest.py
tests/fixtures/: generate_test_images.py
tests/integration/: test_operations.py  test_roundtrip.py
tests/unit/: test_advanced_ops.py  test_analysis.py  test_apps.py  test_augment_equivalence.py  test_augment_pipeline.py  test_augmentations.py  test_block.py  test_blur.py  test_channel.py  test_cli.py  test_color_ops.py  test_colorspace.py  test_compression.py  test_convert.py  test_cross_block.py  test_dct.py  test_dct_dataset.py  test_dct_image.py  test_edge.py  test_filters.py  test_geometry.py  test_libjpeg_bindings.py  test_metrics.py  test_ml_cache.py  test_ml_models.py  test_photo_ops.py  test_profiling.py  test_quality.py  test_quantization.py  test_scale.py  test_sharpen.py  test_upscale.py  test_validation.py
